--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,5 @@
             "Georgeff\\Event\\Test\\": "tests/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
